--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "ts-node --files src/app.ts",
+    "start": "node bin/app.js",
+    "start:dev": "ts-node --files src/app.ts",
     "heroku:deploy": "tsc && node bin/app.js",
     "dev": "nodemon --config nodemon.json src/app.ts",
     "dev:debug": "nodemon --config nodemon.json --inspect-brk src/app.ts",
